# controller/article.go
@@ -1,7 +1,9 @@
 package controller
 
 import (
+	"fmt"
 	"net/http"
+	"regexp"
 	"strconv"
 	requestinput "tulisaja/request-input/article"
 	service "tulisaja/service"
@@ -11,12 +13,97 @@ import (
 	"gorm.io/gorm"
 )
 
+// Get Article godoc
+//
+//	@Summary	Get random article.
+//	@Tags		Articles
+//
+//	@Param		Authorization	header	string	true	"Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+//	@Security	BearerToken
+//
+//	@Param		limit	query	int	false	"Limit returning value"
+//	@Param		page	query	int	false	"Paging"
+//	@Produce	json
+//	@Router		/articles [get]
 func GetRandomArticles(c *gin.Context) {
+	db := c.MustGet("db").(*gorm.DB)
+	var limit int = 10
+	var page int = 1
 
+	if match, _ := regexp.MatchString("[0-9]", "peach"); c.Query("limit") != "" && match {
+		v, _ := strconv.Atoi(c.Query("limit"))
+		limit = v
+	}
+
+	if match, _ := regexp.MatchString("[0-9]", "peach"); c.Query("page") != "" && match {
+		v, _ := strconv.Atoi(c.Query("page"))
+		page = v
+	}
+
+	filters := service.Filters{
+		Limit: limit,
+		Page:  page,
+	}
+
+	articles, err := service.GetRandomArticles(db, filters)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"status_code": http.StatusInternalServerError, "messsage": "Failed get articles"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"status_code": http.StatusOK, "messsage": "Success to create article", "data": articles})
+	return
 }
 
+// Get user article godoc
+//
+//	@Summary	Get user article.
+//	@Tags		Articles
+//
+//	@Param		Authorization	header	string	true	"Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+//	@Security	BearerToken
+//
+//	@Param		limit		query	int		false	"Limit returning value"
+//	@Param		page		query	int		false	"Paging"
+//	@Param		username	path	string	true	"user username"
+//	@Produce	json
+//	@Router		/articles/{username} [get]
 func GetArticles(c *gin.Context) {
+	db := c.MustGet("db").(*gorm.DB)
+	var limit int = 10
+	var page int = 1
+	var username = c.Param("username")
+	fmt.Println(username)
 
+	if match, _ := regexp.MatchString("[0-9]", "peach"); c.Query("limit") != "" && match {
+		v, _ := strconv.Atoi(c.Query("limit"))
+		limit = v
+	}
+
+	if match, _ := regexp.MatchString("[0-9]", "peach"); c.Query("page") != "" && match {
+		v, _ := strconv.Atoi(c.Query("page"))
+		page = v
+	}
+
+	filters := service.Filters{
+		Limit: limit,
+		Page:  page,
+	}
+
+	articles, err := service.GetArticles(db, filters, username)
+	if err != nil {
+		switch err.Error() {
+		case "username not found":
+			c.JSON(http.StatusNotFound, gin.H{"status_code": http.StatusNotFound, "messsage": "Username not found"})
+			return
+		default:
+			c.JSON(http.StatusInternalServerError, gin.H{"status_code": http.StatusInternalServerError, "messsage": "Internal server error"})
+			return
+		}
+	}
+
+	c.JSON(http.StatusOK, gin.H{"status_code": http.StatusOK, "messsage": "Success to get article", "data": articles})
+	return
 }
 
 func GetArticle(c *gin.Context) {
